kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-svc
  namespace: mytest
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: spring
